--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@capacitor/app": "1.1.1",
-    "@capacitor/core": "3.6.0",
+    "@capacitor/core": "^3.6.0",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.3",
     "@ionic/react": "^6.0.0",
@@ -19,8 +19,12 @@
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "ionicons": "^5.4.0",
+    "laravel-echo": "^1.14.1",
+    "onesignal-cordova-plugin": "^3.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^7.32.2",
+    "react-onesignal": "^2.0.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
@@ -66,5 +70,5 @@
   "devDependencies": {
     "@capacitor/cli": "3.6.0"
   },
-  "description": "An Ionic project"
+  "description": "Aplicación ayudamedica"
 }
